# MAVSDK

./: .gitmodules
examples/lights/: CMakeLists.txt  colormap.cpp  colormap.hpp  colormap.txt  fly_lit_mission.cpp  lights.cpp
src/: plugins.txt
src/mavsdk/core/: system_impl.cpp  system_impl.h
src/mavsdk/plugins/lights/: CMakeLists.txt  lights.cpp  lights_impl.cpp  lights_impl.h
src/mavsdk/plugins/lights/include/plugins/lights/: lights.h
src/mavsdk/plugins/telemetry/: telemetry_impl.cpp  telemetry_impl.h
src/mavsdk_server/src/: grpc_server.cpp  grpc_server.h
src/mavsdk_server/src/plugins/lights/: lights_service_impl.h
